added front end framework

--- a/Blog Frontend/public/styles/style.css
+++ b/Blog Frontend/public/styles/style.css
@@ -71,6 +71,7 @@ body {
     width: max-content;
     transition: background 0.2s ease-in-out;
     margin: 0.1rem;
+    cursor: pointer;
 }
 
 .primary-button:hover {
