--- a/Blog Frontend/views/layouts/main-layout.ejs
+++ b/Blog Frontend/views/layouts/main-layout.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
+    <%- include('../partials/nav.ejs') %>
     <main class="main-page-content">
         <%- body %>
     </main>
