added routing for all gets and CRUD operations

--- a/Blog Frontend/public/styles/style.css
+++ b/Blog Frontend/public/styles/style.css
@@ -206,3 +206,12 @@ nav.home-page {
 .nav-button:hover {
     text-decoration: underline;
 }
+
+.post-title a {
+    color: black;
+    text-decoration: none;
+}
+
+.post-title a:hover {
+    text-decoration: underline;
+}
