Create post front end functionality

--- a/Blog Frontend/views/create.ejs
+++ b/Blog Frontend/views/create.ejs
@@ -2,7 +2,7 @@
     <div class="page-title-wrapper">
         <h1 class="page-title">New Post</h1>
     </div>
-    <form>
+    <form id="create_post">
         <div class="create-post-form-wrapper">
             <input type="text" name="title" id="title" placeholder="Title">
             <textarea type="text" name="body" id="body" placeholder="Content" rows="10"></textarea>
@@ -10,4 +10,5 @@
             <button type="submit" class="primary-button create-post-page">Create Post</button>
         </div>
     </form>
+    <script src="/scripts/createPost.js"></script>
 </section>
