--- a/Blog Frontend/views/blog.ejs
+++ b/Blog Frontend/views/blog.ejs
@@ -9,7 +9,7 @@
         <div class="blog-post-container" id="<%- post.id %>">
             <h2 class="post-title"><a href="/post/<%- post.id %>"><%- post.title %></a></h2>
             <span class="post-author">By: <%- post.author %></span>
-            <p class="post-body"><%- post.body %></p>
+            <p class="post-body"><%- presentation.limitContent(post.body, 500) %></p>
             <span class="post-date"><%- presentation.date(post.date) %></span>
             <% if(post.tags.length > 0) { %>
                 <div class="tag-wrapper">
@@ -19,9 +19,10 @@
                 </div>
             <% } %>
             <div class="post-button-wrapper">
-                <a href="/edit-post" class="edit-button primary-button blog-button" data-post-id="<%- post.id %>" data-edit-btn>Edit</a>
+                <a href="/edit-post/<%- post.id %>" class="edit-button primary-button blog-button" data-post-id="<%- post.id %>" data-edit-btn>Edit</a>
                 <button type="button" class="delete-button blog-button" data-post-id="<%- post.id %>" data-delete-btn>Delete</button>
             </div>
         </div>
     <% } %>
+    <script src="/scripts/deletePost.js"></script>
 </section>
